--- a/arch/arm/configs/trikboard_defconfig
+++ b/arch/arm/configs/trikboard_defconfig
@@ -276,8 +276,14 @@ CONFIG_MEMORY=y
 CONFIG_TI_AEMIF=y
 CONFIG_DA8XX_DDRCTL=y
 CONFIG_IIO=y
+CONFIG_IIO_SW_DEVICE=y
+CONFIG_IIO_SW_TRIGGER=y
 CONFIG_MMA8452=y
 CONFIG_IIO_ST_GYRO_3AXIS=y
+CONFIG_IIO_HRTIMER_TRIGGER=y
+CONFIG_IIO_INTERRUPT_TRIGGER=y
+CONFIG_IIO_TIGHTLOOP_TRIGGER=y
+CONFIG_IIO_SYSFS_TRIGGER=y
 CONFIG_PWM=y
 CONFIG_PWM_TIECAP=y
 CONFIG_PWM_TIEHRPWM=y
